--- a/ProposalManagerV1.0/.settings/org.eclipse.wst.common.component
+++ b/ProposalManagerV1.0/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,8 @@
     <wb-module deploy-name="CloudManager">
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <property name="java-output-path" value="/CloudManager/build/classes"/>
         <property name="context-root" value="ProposalManager"/>
     </wb-module>
